--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="submit" value="Submit">
     </form>
     <div id="image-container"></div>
+    <button id="loadButton">Load More</button>
     <script src="script.js"></script>
 </body>
 </html>
